src/Components/Header/Header.css
.MainHeader {
    width: 90%;
    height: 12vh;
    /* background-color: white; */
    display: flex;
    justify-content: center;
    align-items: flex-end;
    position: fixed;


    & a {
        text-decoration: none;
        color: white;
    }
}

.subHeader {
    width: 100%;
    height: 80%;
    background: rgba(8, 21, 73, 0.35);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5.4px);
    -webkit-backdrop-filter: blur(5.4px);
    border: 1px solid rgba(164, 171, 201, 0.61);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 30px;

}


.nav {
    width: 50%;
    height: 100%;
    /* background-color: aqua; */
    display: flex;
    align-items: center;
    font-weight: 400;
    font-size: 15px;

}

.nav a.active {
    color: orange;
    border-bottom: 1px solid orange;
    font-size: 20px;
}
  


.logo {
    width: 40%;
    height: 100%;

    & img {
        height: 100%;
        /* background-color: bisque; */
    }
}

/* Hamburger menu button */
.hamburger {
    display: none;
    cursor: pointer;
    flex-direction: column;
    justify-content: space-between;
    height: 25px;
    width: 30px;
    position: absolute;
    right: 20px; /* Position hamburger on the right side */
}

.hamburger div {
    height: 4px;
    width: 100%;
    transition: all 0.3s ease-in-out;
}

/* Mobile responsiveness */
@media (max-width: 768px) {
    .MainHeader {
        z-index: 10;
    }
    
    
    .nav {
        display: none;
        width: 100%;
        height: 10vh;
        justify-content: space-between;
        padding-inline: 20px;
        flex-direction: row;
        align-items: center;
        gap: 20px;
        background: rgba(8, 21, 73, 0.35);
        border-radius: 16px;
        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
        backdrop-filter: blur(5.4px);
        -webkit-backdrop-filter: blur(5.4px);
        border: 1px solid rgba(164, 171, 201, 0.61);
        border-top: none;
        border-radius: 0px 0px 20px 20px;
        position: absolute;
        top: 10vh;
        left: 10%;
        transform: translateX(-50%) translateY(0);
    } 

    .nav a {
        text-decoration: none;
        color: white;
        display: flex;
        justify-content: center;
        margin-left: 4%;
        transform: translateX(-50%);
    
    }

    .nav a.active {
        color: orange;
        border-bottom: 1px solid orange;
        font-size: 20px;
        transform: translateX(-50%);
        opacity: 1;
    }

    .nav.active {
        display: flex;
        transform: translateX(-10%); 
        transition:  transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
    }

    .nav.active.show {
        transform: translateX(0);
        opacity: 1;
    }

    .subHeader {
        padding-inline: 15px;
    }

    .hamburger {
        display: block;
        position: absolute;
        top: 15%;
        right: 10%;
    }
}


.logo {
    width: 25%;
    height: 100%;

    & img {
        height: 100%;
        /* background-color: bisque; */
    }
}

